<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawble_main_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.SubmitActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageBackArrow"
                android:layout_width="21dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:gravity="start"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="345dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                app:srcCompat="@drawable/gads_header"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/project_submission"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FF9800"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="6dp"
            android:background="#FFC107"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="60dp"
            android:filterTouchesWhenObscured="false"
            android:foregroundGravity="center_horizontal"
            android:foregroundTint="#FFEB3B"
            android:requiresFadingEdge="horizontal"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"
                app:cardCornerRadius="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"
                app:cardCornerRadius="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/TextInputLayoutEmail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutLink"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextLink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/project_on_github_link"
                android:inputType="textUri"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubmit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="#FF9800"
            android:gravity="center"
            android:text="@string/Submit"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            tools:targetApi="lollipop" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
